[gd_scene load_steps=29 format=3 uid="uid://b5y58fregd5sy"]

[ext_resource type="PackedScene" uid="uid://8kwxltptqb4u" path="res://Scenes/Simulation/Camera.tscn" id="1"]
[ext_resource type="Script" path="res://Scenes/Simulation/TileBuilder_Square.gd" id="2"]
[ext_resource type="Script" path="res://Scenes/Simulation/GameController.gd" id="3"]
[ext_resource type="ArrayMesh" uid="uid://dnftjt3ccfii3" path="res://Ressources/3D/Tile.obj" id="4"]
[ext_resource type="ArrayMesh" uid="uid://cvsoduf3s7lli" path="res://Ressources/3D/Selector.obj" id="5"]
[ext_resource type="Script" path="res://Scenes/Simulation/ZoneHighlighter.gd" id="6"]
[ext_resource type="Script" path="res://Scripts/WalkStrategy.gd" id="7"]
[ext_resource type="Script" path="res://Scenes/Simulation/ArrowDrawer.gd" id="8"]
[ext_resource type="Script" path="res://Scenes/Simulation/Display3D.gd" id="9"]
[ext_resource type="Script" path="res://Scenes/Simulation/MapData.gd" id="10"]
[ext_resource type="Script" path="res://Scenes/Simulation/Token.gd" id="11"]
[ext_resource type="Script" path="res://Scenes/Simulation/TokenDisplayer.gd" id="12"]
[ext_resource type="Script" path="res://Scenes/Simulation/SceneData.gd" id="13"]
[ext_resource type="Script" path="res://Scripts/DD3/DD3_CharacterSheet.gd" id="14"]
[ext_resource type="Script" path="res://Scenes/Simulation/TileInfo.gd" id="15"]
[ext_resource type="Script" path="res://Scenes/Simulation/ActionButton.gd" id="16"]

[sub_resource type="StandardMaterial3D" id="1"]
albedo_color = Color(0.603922, 0.109804, 0.109804, 1)

[sub_resource type="CylinderMesh" id="2"]
material = SubResource("1")

[sub_resource type="StandardMaterial3D" id="3"]
albedo_color = Color(0.133333, 0.584314, 0.0823529, 1)

[sub_resource type="CylinderMesh" id="4"]
material = SubResource("3")
radial_segments = 16
rings = 2

[sub_resource type="MultiMesh" id="5"]
transform_format = 1
mesh = ExtResource("4")

[sub_resource type="BoxShape3D" id="6"]

[sub_resource type="StandardMaterial3D" id="11"]
transparency = 1
albedo_color = Color(0.745098, 0.388235, 0.196078, 0.572549)

[sub_resource type="PlaneMesh" id="12"]
material = SubResource("11")

[sub_resource type="MultiMesh" id="13"]
transform_format = 1
use_colors = true
mesh = SubResource("12")

[sub_resource type="CapsuleMesh" id="14"]
radius = 0.1
radial_segments = 12
rings = 4

[sub_resource type="MultiMesh" id="15"]
transform_format = 1
mesh = SubResource("14")

[sub_resource type="Environment" id="17"]
background_mode = 1
ambient_light_source = 2
ambient_light_color = Color(0.592157, 0.592157, 0.592157, 1)

[node name="GameController" type="Node3D"]
script = ExtResource("3")

[node name="SceneData" type="Node" parent="."]
script = ExtResource("13")

[node name="Tokens" type="Node" parent="SceneData"]

[node name="Token" type="Node3D" parent="SceneData/Tokens"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 5, 0)
script = ExtResource("11")
displayed_name = "Hero"
size = Vector3(1, 1, 0.25)
model3D = SubResource("2")

[node name="WalkStrategy" type="Node" parent="SceneData/Tokens/Token"]
script = ExtResource("7")

[node name="CharacterSheet" type="Node" parent="SceneData/Tokens/Token"]
script = ExtResource("14")

[node name="Token2" type="Node3D" parent="SceneData/Tokens"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7, 6, 0)
script = ExtResource("11")
displayed_name = "Zero"
size = Vector3(1, 1, 0.25)
model3D = SubResource("4")

[node name="MapData" type="Node" parent="SceneData"]
script = ExtResource("10")

[node name="Camera" parent="." instance=ExtResource("1")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9, 4, 14)

[node name="Display3D" type="Node3D" parent="."]
script = ExtResource("9")

[node name="TileBuilder_Square" type="MultiMeshInstance3D" parent="Display3D"]
multimesh = SubResource("5")
script = ExtResource("2")

[node name="Click_detection" type="Area3D" parent="Display3D/TileBuilder_Square"]
visible = false

[node name="CollisionShape" type="CollisionShape3D" parent="Display3D/TileBuilder_Square/Click_detection"]
transform = Transform3D(1, 0, 0, 0, 0.25, 0, 0, 0, 1, 0, 0, 0)
shape = SubResource("6")

[node name="Selector" type="MeshInstance3D" parent="Display3D"]
mesh = ExtResource("5")

[node name="ZoneHighlighter" type="MultiMeshInstance3D" parent="Display3D"]
multimesh = SubResource("13")
script = ExtResource("6")

[node name="ArrowDrawer" type="MultiMeshInstance3D" parent="Display3D"]
multimesh = SubResource("15")
script = ExtResource("8")

[node name="TokenDisplayer" type="Node3D" parent="Display3D"]
script = ExtResource("12")

[node name="VBoxContainer" type="VBoxContainer" parent="."]

[node name="Button_select" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Sel"

[node name="Button_sculptTool" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Sculpt"

[node name="TileInfo" type="Panel" parent="."]
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -146.0
grow_horizontal = 0
grow_vertical = 2
script = ExtResource("15")
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="TileInfo"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
text = "display"

[node name="ActionButtons" type="VBoxContainer" parent="TileInfo"]
layout_mode = 0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Template" type="Button" parent="TileInfo/ActionButtons"]
visible = false
layout_mode = 2
text = "Test"
script = ExtResource("16")

[node name="Coordinate" type="Label" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, 0.75, -0.433013, 0, 0, 0)
light_color = Color(0.827451, 0.631373, 0.490196, 1)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("17")

[connection signal="mouse_tile_event" from="Display3D/TileBuilder_Square" to="." method="_on_TileBuilder_Square_mouse_tile_event"]
[connection signal="input_event" from="Display3D/TileBuilder_Square/Click_detection" to="Display3D/TileBuilder_Square" method="_on_Area_input_event"]
[connection signal="pressed" from="VBoxContainer/Button_select" to="." method="_on_Button_select_pressed"]
[connection signal="pressed" from="VBoxContainer/Button_sculptTool" to="." method="_on_Button_sculptTool_pressed"]
[connection signal="on_action_choosed" from="TileInfo/ActionButtons/Template" to="." method="_on_action_choosed"]
[connection signal="pressed" from="TileInfo/ActionButtons/Template" to="TileInfo/ActionButtons/Template" method="_on_Template_pressed"]
